# pyku

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  LICENCE  LICENSE  README.rst  pyproject.toml
.github/workflows/: cache.yaml  pipeline.yaml
definitions/: download_test_data.py  test_data.ipynb
definitions/projections/: EPISODES.py  EUR-11.ipynb  EUR-44.ipynb  EUR-Notes.ipynb  HYR-LAEA.ipynb  HYR-LCC-1.py  HYR-LCC-125.py  HYR-LCC-3.py  HYR-LCC-5.py  HYR-LCC-50.py  RADKLIM_RADOLAN.ipynb  cerra.ipynb  check_era5convert.py  linet_eqc.py  mks_germany.ipynb  radolan_wx.py  radolan_wx_250m.py  seamless_europe.py  seamless_germany.py  seamless_world.py
doc/: analyse.rst  api.rst  check.rst  colormaps.rst  compute.rst  conf.py  downscale.rst  drs.rst  features.rst  find.rst  geo.rst  index.rst  installation.rst  magic.rst  mask.rst  meta.rst  ogc.rst  pdftransfer.rst  plugins.rst  postmodel.rst  read.rst  regression.rst  resources.rst  timekit.rst  troubleshooting.rst
doc/_static/: script.sh
doc/_static/css/: custom.css
doc/contribute/: developers.rst  index.rst  maintainers.rst  style_guideline.rst
doc/plugins/climate_indicators/: anomaly.rst  background_info.rst  climatology.rst  clix.rst  config_CORDEX-CMIP5.yaml  config_CORDEX-CMIP6.yaml  configuration.rst  missing_values.rst  new_indicators.rst  overview.rst  python_integration.rst  scenario.rst  troubleshooting.rst
doc/savefig/: README.md
doc/standards/: climatic_regions.rst
doc/tutorials/: CMORization.ipynb  colormaps.rst  customize_plots.ipynb  distributed_computing.rst  downscaling_svd.ipynb  geographic_projections.ipynb  index.rst  loess_examples.ipynb  named_ensembles.ipynb  pdf_transfer.ipynb  polygons.ipynb  starter.ipynb
pyku/: __init__.py  analyse.py  check.py  colormaps.py  compute.py  downscale.py  drs.py  features.py  find.py  geo.py  loess.py  magic.py  mask.py  meta.py  ogc.py  pdftransfer.py  postmodel.py  pyku.py  read.py  regression.py  resources.py  timekit.py
pyku/clix/: __init__.py  cli.py  core.py  custom_indicators.py  manager.py
pyku/core/: __init__.py  config_provider.py  resource_provider.py
pyku/etc/: areas.yaml  areas_cf.yaml  base_colours.yaml  climate_indicators.yaml  drs.yaml  ensembles.yaml  metadata.yaml  resources.yaml
pyku/etc/geodata/: Regionen_NationalerKlimareport_2015_Namen.geojson  eobs_mask.geojson  germany.geojson  prudence.geojson
testing/: check_notebooks_are_cleared.ipy  compute_test.py  drs_test.py  geo_test.py  loess_test.py  manual_testing_of_projection_methods.ipynb  meta_test.py  timekit_test.py
testing/core/: config_provider_test.py  resource_provider_test.py
